common/knative/knative-serving/overlays/86labs/kserve-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kserve-gateway
spec:
  selector:
    app: kserve-ingress
    istio: kserve-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
      - "*"
    tls:
      httpsRedirect: true
  - hosts:
      - "*"
      - "*"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
